--- a/src/styles/info.css
+++ b/src/styles/info.css
@@ -3,7 +3,6 @@
     background-color: white;
     border: var(--border);
     border-radius: var(--radius);
-    transition: var(--color-transition);
     display: grid;
     grid-template-rows: 1fr 1fr;
 
@@ -33,7 +32,6 @@
 
 .card-icon {
     width: 8vw;
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
 
 .card-temp {
@@ -50,12 +48,13 @@
 
 .week-bg {
     height: 100vh;
-    padding: 18px;
+    padding: 30px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--main-color) 30%, var(--main-color) 100%);
 }
 
 .week-forecast {
     height: 100%;
+    padding: 20px;
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-columns: 50px;
@@ -74,7 +73,7 @@
 
 .daily-text {
     font-family: 'Bitter', serif;
-    font-size: 4.5vw;
+    font-size: 6.5vw;
     color: var(--color-white);
     margin-right: auto;
 }
@@ -86,7 +85,6 @@
 
 .daily-icon {
     width: 12vw;
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
     padding-right: 15px;
 }
 
