--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,12 +36,11 @@
 
 :root {
     --main-color: white;
-    --color-white: white;
+    --color-white: rgb(0, 0, 0);
     --border: 1px solid var(--main-color);
     --border-white: 1px solid var(--color-white);
     --radius: 40px;
     --br: 2px;
-    --color-transition: color 2s ease-in;
     --gray: rgb(96, 96, 96);
 
 }
